 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/05/20:
   * Fixed bug #1717782, Bad fullscreen in ooimpress2  ( Henrik )
     mwm hint had no-resize which made resizing with 
     FluxboxWindow::setFullscreen impossible.
     Window.cc
*07/05/19:
   * Fixed bug #1718112, memory leak in FbWindow::textProperty ( Henrik )
     FbTk/FbWindow.cc
*07/05/17:
   * Fixed some window placement issues (thanks Tomas Janousek)
     ScreenPlacement.cc
*07/05/16:
   * Fixed bug with fluxbox-generate_menu -is (thanks Jim Ramsay)
     util/fluxbox-generate_menu.in
*07/05/12:
   * Changed interpretation of Horizontal/Vertical maximization of a window that
     is already maximized (Mark)
     Window.cc
   * Fixed tabs disappearing with [Deco] {TAB} and tabs in titlebar (Mark)
     Window.cc Screen.cc
*07/05/04:
   * Fixed infinite loop caused by deiconify command (Mark)
     FbCommands.cc
*07/04/24:
   * Fixed a bug in parsing cli (Mathias, thanks to Steven Kah Hien Wong <steven at
     zensaki dot com> for pointing out the issue)
     src/main.cc
*07/04/23:
   * Use asciidoc-generated manpages as the default from now on (Mathias)
   * Disabled resizing shaded windows (Mark)
     FbWinFrame.cc Window.cc
*07/04/20:
   * Fix slit.onhead with BOTTOMLEFT placement.(Thanks Tomas Janousek <tomi@nomi.cz>)
     Slit.cc
*07/04/19:
   * Fixed crash when CustomMenu command doesn't point to a file (Mark)
     FbCommands.cc
*07/04/17:
   * cosmetic changes (Mathias, thanks Slava Semushin)
     configure.in Screen.cc Keys.cc main.cc FbTk/MenuItem.hh FbTk/Timer.hh
     FbTk/XLayerItem.hh FbTk/ImageControl.cc FbTk/I18n.hh FbTk/FbWindow.hh
      FbTk/XLayer.hh fluxbox.cc
*07/04/11:
   * updated asciidoc-docs, (Mathias, thanks Christian Loosli for fluxbox.de.txt)
*07/04/08:
   * Menu when clicking workspacename in toolbar wasn't getting focused (Mark)
     ToolFactory.cc
   * Buttons with different textures when pressed weren't getting reset
     properly (Mark)
     FbTk/Button.cc